forge/1.16.5/knowledge/version-changes/1.20.x.md
# 版本变更记录：1.20.x

## 1.20.1 → 1.20.4 迁移注意事项

> 以下为 Forge 1.20.1 特性，1.20.4 基本兼容但有以下差异：

### 已知差异

| 项目 | 1.20.1 | 1.20.4 |
|------|---------|---------|
| Forge 版本 | 47.x | 48.x |
| Registry API | 完全一致 | 完全一致 |
| DataGen API | 完全一致 | 完全一致 |

### 1.20.x 通用重要变更

#### DeferredRegister 成为唯一推荐

1.20.1 之前使用 `RegistryEvent.Register<T>`，1.18+ 推荐使用 DeferredRegister。

```java
// 1.18+ 推荐方式
public static final DeferredRegister<Block> BLOCKS =
    DeferredRegister.create(ForgeRegistries.BLOCKS, MOD_ID);
BLOCKS.register(modEventBus);

// ❌ 旧方式（1.18 之前）
@SubscribeEvent
public static void register(RegisterEvent event) {
    event.register(ForgeRegistries.BLOCKS).register("my_block", MyBlock::new);
}
```

#### BlockBehaviour.Properties 变化

1.17+ 移除了部分旧方法，使用 `of()` 静态工厂：

```java
// ✅ 推荐（链式调用）
BlockBehaviour.Properties.of(Material.WOOD)
    .mapColor(MapColor.WOOD)
    .strength(2.0f)
    .noOcclusion();

// ❌ 已移除
BlockBehaviour.Properties.create(Material.WOOD)  // create 不存在
```

#### EntityType 注册方式

1.18+ 使用 `EntityType.Builder.of()` 注册实体，移除了旧的 `EntityRegistry` 方法。

---

## 1.20.1 Forge 特有注意事项

### Forge 47.x 推荐配置

```properties
minecraft_version=1.20.1
forge_version=47.4.10
forge_version_range=[47,)
loader_version_range=[47,)
mapping_channel=official  # 或 parchment
mapping_version=20231030.163645  # official
# parchment: mapping_version=2023.09.03-1.20.1
```

### 1.20.1 已知问题

#### DeferredRegister for ArmorMaterial（#9961）

1.20.6 修复了 `DeferredRegister` 在特定时机对 `ArmorMaterial` 的兼容性问题。1.20.1 避免在 DeferredRegister lambda 中直接构造依赖 ArmorMaterial 的对象。

```java
// ✅ 安全
public static final RegistryObject<Item> COPPER_HELMET = ARMOR.register("copper_helmet",
    () -> new ArmorItem(COPPER_ARMOR_MATERIAL, ArmorItem.Type.HELMET, new Item.Properties())
);

// ⚠️ 注意：ArmorMaterial 需要先定义完整，不能在 lambda 中构造
```

### Parchment 映射配置

```properties
mapping_channel=parchment
mapping_version=2023.09.03-1.20.1
```

注册 Parchment Gradle 插件（在 build.gradle）：
```groovy
plugins {
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
}
```
